// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicUploader /> should match snapshot 1`] = `
<div
  className="sc-htpNat dlqdjv k-BasicUploader k-BasicUploader--ready"
>
  <input
    disabled={false}
    id="BasicUploader"
    onChange={[Function]}
    type="file"
  />
  <label
    className="sc-bdVaJa bhUvla k-Button k-BasicUploader__button k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-fluid k-Button--mobile-fit-none"
    disabled={null}
    htmlFor="BasicUploader"
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      className="k-BasicUploader__button__uploadIcon k-u-margin-right-singleHalf"
      fill="#fff"
      height="13"
      viewBox="0 0 12 13"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
      />
    </svg>
    <span>
      Document
    </span>
  </label>
</div>
`;

exports[`<BasicUploader /> should match snapshot with Error props 1`] = `
<div
  className="sc-htpNat dlqdjv k-BasicUploader k-BasicUploader--ready"
>
  <input
    disabled={false}
    id="BasicUploader"
    onChange={[Function]}
    type="file"
  />
  <label
    className="sc-bdVaJa bhUvla k-Button k-BasicUploader__button k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-fluid k-Button--mobile-fit-none"
    disabled={null}
    htmlFor="BasicUploader"
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      className="k-BasicUploader__button__uploadIcon k-u-margin-right-singleHalf"
      fill="#fff"
      height="13"
      viewBox="0 0 12 13"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
      />
    </svg>
    <span>
      Document
    </span>
  </label>
</div>
`;

exports[`<BasicUploader /> should match snapshot with props 1`] = `
<div
  className="sc-htpNat dlqdjv k-BasicUploader k-BasicUploader--valid"
>
  <input
    disabled={true}
    id="BasicUploader"
    multiple={true}
    onChange={[Function]}
    type="file"
  />
  <label
    className="sc-bdVaJa bhUvla k-Button k-BasicUploader__button k-Button--big k-Button--hydrogen k-Button--orion k-Button--fit-fluid k-Button--mobile-fit-none"
    disabled={null}
    htmlFor="BasicUploader"
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      className="k-BasicUploader__button__uploadIcon k-u-margin-right-singleHalf"
      fill="#fff"
      height="13"
      viewBox="0 0 12 13"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
      />
    </svg>
    <span>
      Document
    </span>
  </label>
  <div
    className="k-BasicUploader__statusBlock"
  >
    <button
      className="k-BasicUploader__cancelButton"
      onClick={[Function]}
    >
      <svg
        fill="none"
        viewBox="0 0 17 18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
          fill="#222"
          fill-rule="evenodd"
        />
      </svg>
      <span
        className="k-u-a11y-visuallyHidden"
      >
        Cancel and reupload
      </span>
    </button>
    <div>
      <p
        className="k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-regular k-BasicUploader__statusTitle  k-u-margin-none k-u-line-height-1-3"
      >
        document.pdf
      </p>
      <p
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light k-BasicUploader__statusSubtitle  k-u-margin-none k-u-margin-top-noneHalf k-u-line-height-1-3"
      >
        The document has been validated
      </p>
    </div>
  </div>
</div>
`;
